# MiniDrone

./: README.md
luckfox/Pico_Mini_B_Flash_images/: .env.txt  boot.img  env.img  idblock.img  sd_update.txt  tftp_update.txt  uboot.img  userdata.img
mini-drone/: .gitignore  Cargo.toml
mini-drone/.cargo/: config.toml
mini-drone/controller/: Cargo.toml
mini-drone/controller/src/: lib.rs
mini-drone/cross/: Cargo.toml
mini-drone/cross/application/: Cargo.toml
mini-drone/cross/application/src/: main.rs
mini-drone/cross/flight-controller-unit/: Cargo.toml
mini-drone/cross/flight-controller-unit/src/: lib.rs
mini-drone/xtask/: Cargo.toml
mini-drone/xtask/src/: main.rs
