[package]
authors = ["Arnaud HOTE"]
name = "mini-drone"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "mini-drone"
bench = false
doctest = false
test = false

[dependencies]
flight-controller-unit = { path = "../flight-controller-unit" }
defmt = { version = "1.0", features = ["encoding-rzcobs"] }
rtic = { version = "2.2.0", features = [ "thumbv7-backend" ] }

# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}
